Fix Spacing Issues

--- a/src/components/award-achivements.module.css
+++ b/src/components/award-achivements.module.css
@@ -6,7 +6,6 @@
 }
 
 .container {
-    /* max-width: 1200px; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -75,7 +74,7 @@
 
 .card img {
     /* max-width: 80%; */
-    height: 40px;
+    height: 45px;
     object-fit: contain;
 }
 
