--- a/src/components/contactsection.module.css
+++ b/src/components/contactsection.module.css
@@ -5,8 +5,8 @@
 }
 
 .section {
+    font-weight: 500;
     width: 100%;
-    min-height: 70vh;
 }
 
 .container {
@@ -29,7 +29,7 @@
 
 .heading {
     font-size: 3rem;
-    font-weight: 700;
+    font-weight: 600;
     margin-bottom: 20px;
     margin-top: revert;
     line-height: 0.5;
@@ -39,7 +39,7 @@
 .subtitle {
     font-size: 1.7em;
     margin-bottom: 40px;
-    font-weight: bold;
+    font-weight: 500;
     line-height: 1.6;
     opacity: 0.9;
     color: white;
@@ -62,7 +62,7 @@
     display: flex;
     align-items: center;
     margin-bottom: 15px;
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     color: white;
 }
 
@@ -224,7 +224,7 @@ textarea:focus {
 
 .disclaimer {
     text-align: center;
-    font-size: 13px;
+    font-size: 1rem;
     color: #666;
     line-height: 1.5;
     margin-bottom: 0;
