--- a/src/components/statistics.module.css
+++ b/src/components/statistics.module.css
@@ -25,7 +25,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 50px;
+    padding: 66px;
 }
 
 .statistics h5 {
